css/guardianc.css
body {
  margin: 0;
  font-family: 'Segoe UI', Tahoma, Verdana, Arial, sans-serif;
  font-size: 13px;
  line-height: 18px;
  color: #111;
}

.clearfix:after {
  display: block;
  height: 0;
  clear: both;
  font-size: 0;
  content: ".";
  visibility: hidden;
}

.container {
  width: auto;
}

.header {
  margin: 8px 0 0 20px;
}

.guardian-unit {
  float: left;
  width: 300px;
  margin: 5px 0 5px 20px;
}

.g-select {
  float: left;
  width: 163px;
}

.guardian-wrapper {
  margin-top: 2px;
  clear: both;
}

.guardian-data {
  margin-top: 10px;
}

.select-header {
  float: left;
  width: 79px;
  height: 25px;
  font-weight: 700;
  color: #333;
}

.g-stat {
  height: 20px;
  padding: 0;
  margin: 5px 0;
  clear: both;
  list-style: none;
}

.g-stat-label {
  display: inline-block;
  float: left;
  width: 40px;
  font-weight: 700;
  color: #333;
}

.g-stat-value {
  display: inline-block;
  float: left;
  width: 40px;
  text-align: right;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
}

.g-stat-header {
  width: 47px;
  height: 30px;
  font-size: 12px;
  font-weight: 700;
  line-height: 14px;
  color: #333;
  text-align: center;
  background-color: #fff!important;
}

.base {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #eee;
}

.type {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #eee;
}

.cool {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #f0f3a2;
}

.stat {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #f0f3a2;
}

.max {
  padding: 1px 4px 2px 0;
  margin-left: 3px;
  background-color: #f3d0a2;
}

.best-1 {
  font-weight: 700;
  color: #2bad4a!important;
}

.best-2 {
  color: #2bad4a!important;
}

.worst-1 {
  color: #d8503e!important;
}

.link-header {
  width: 910px;
  padding-left: 5px;
  font-weight: 700;
  line-height: 22px;
  color: #0e385f;
  background-color: #d8dfea;
}

.legend,
.links,
.programmer {
  margin: 8px 0 0 20px;
  overflow: hidden;
  clear: both;
}

.links a,
.links a:visited,
.programmer a,
.programmer a:visited {
  font-size: 12px;
  color: #0e385f;
  text-decoration: none;
}

.programmer {
  margin-bottom: 10px;
}

.legend dl {
  margin: 0 0 0 40px;
  font-size: 12px;
}

.legend dt {
  float: left;
  width: 70px;
  clear: left;
}

.legend dd {
  float: left;
  margin: 0;
}

.links ul {
  margin: 0;
  list-style: none;
}

.version-info {
  margin-left: 40px;
  font-size: 12px;
}

@media only screen and (-webkit-min-device-pixel-ratio: 2) {
  .link-header {
    width: 310px;
  }
  .legend dl {
    margin-left: 20px;
  }
  .links ul {
    padding-left: 20px;
  }
}

